[workspace]
resolver = "2"
members = ["error", "net", "server", "snow"]

[workspace.package]
edition = "2024"

[workspace.dependencies]
bytes = "1.11.0"
rand = "0.9.2"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.43"
serde = { version = "1.0", features = ["derive"] }
config = "0.13"
toml = "0.9.8"
