[workspace]
members = ["core", "error", "net", "server"]
resolver = "2"

[workspace.dependencies]
bytes = "1.11.0"
config = "0.15.19"
rand = "0.9.2"
thiserror = "2.0.17"
toml = "0.9.8"
tracing = "0.1.43"

[workspace.dependencies.serde]
version = "1.0"
features = ["derive"]

[workspace.dependencies.tokio]
version = "1.48.0"
features = ["full"]

[workspace.dependencies.tracing-subscriber]
version = "0.3"
features = ["chrono"]

[workspace.package]
edition = "2024"
license = "MIT"
