[workspace]
members = ["core", "error", "net", "server"]
resolver = "2"

[workspace.dependencies]
bytes = "1.11.0"
config = "0.15.19"
rand = "0.9.2"
thiserror = "2.0.17"
toml = "0.9.8"
tracing = "0.1.43"

serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.48.0", features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["chrono"] }

[workspace.package]
edition = "2024"
license = "MIT"
