[package]
name = "core"
version = "0.0.1"

[package.edition]
workspace = true

[package.license]
workspace = true

[dependencies.config]
workspace = true

[dependencies.error]
path = "../error"

[dependencies.net]
path = "../net"

[dependencies.serde]
workspace = true

[dependencies.server]
path = "../server"

[dependencies.thiserror]
workspace = true

[dependencies.tokio]
workspace = true

[dependencies.toml]
workspace = true

[dependencies.tracing]
workspace = true

[dependencies.tracing-subscriber]
workspace = true

[[bin]]
path = "src/main.rs"
name = "core"
proc-macro = false
required-features = []

[lib]
path = "src/lib.rs"
name = "core"
proc-macro = false
required-features = []
crate-type = ["lib"]
