[package]
name = "core"
version = "0.0.1"
edition = "2021"
license = "MIT"

[dependencies]
error = { path = "../error" }
net = { path = "../net" }
server = { path = "../server" }

config = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[[bin]]
path = "src/main.rs"
name = "core"

[lib]
path = "src/lib.rs"
name = "core"
