[package]
name = "error"
version = "0.0.1"

[package.edition]
workspace = true

[package.license]
workspace = true

[dependencies.config]
workspace = true

[dependencies.thiserror]
workspace = true

[lib]
path = "src/lib.rs"
name = "error"
plugin = false
proc-macro = false
required-features = []
crate-type = ["lib"]
