[package]
name = "net"
version = "0.0.1"
description = "A raknet implementation in Rust for Snow Software"

[package.edition]
workspace = true

[package.license]
workspace = true

[dependencies.bytes]
workspace = true

[dependencies.error]
path = "../error"

[dependencies.rand]
workspace = true

[dependencies.thiserror]
workspace = true

[dependencies.tokio]
workspace = true

[dependencies.tracing]
workspace = true

[lib]
path = "src/lib.rs"
name = "net"
proc-macro = false
required-features = []
crate-type = ["lib"]
