[package]
name = "net"
version = "0.0.1"
description = "A raknet implementation in Rust for Snow Software"
edition = "2024"
license = "MIT"

[dependencies]
error = { path = "../error" }

bytes = { workspace = true }
rand = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[lib]
path = "src/lib.rs"
name = "net"
