[package]
name = "server"
version = "0.0.1"

[package.edition]
workspace = true

[package.license]
workspace = true

[dependencies.error]
path = "../error"

[dependencies.net]
path = "../net"

[dependencies.thiserror]
workspace = true

[dependencies.tokio]
workspace = true

[dependencies.tracing]
workspace = true

[lib]
path = "src/lib.rs"
name = "server"
proc-macro = false
required-features = []
crate-type = ["lib"]
