[package]
name = "snow"
version = "0.1.0"
edition.workspace = true

[dependencies]
error = { path = "../error" }
net = { path = "../net" }
server = { path = "../server" }

thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
serde.workspace = true
config.workspace = true
toml.workspace = true
